Fixed secondary menu overflow issue

--- a/assets/less/admin/admin.less
+++ b/assets/less/admin/admin.less
@@ -1760,7 +1760,8 @@ div.erp-nav-container {
     .erp-nav {
         > li {
             display: inline-block;
-            margin: 0 10px;
+            margin: 0;
+            padding: 0 15px;
             border-bottom: 2px solid transparent;
 
             a {
@@ -1794,7 +1795,7 @@ div.erp-nav-container {
 
             i {
                 position: absolute;
-                right: -5px;
+                right: -2px;
                 top: 50%;
                 color: inherit;
                 font-size: 13px;
@@ -1832,7 +1833,7 @@ div.erp-nav-container {
         display: none;
         position: absolute;
         top: 100%;
-        left: 0;
+        left: 15px;
         background: #FFFFFF;
         z-index: 1;
         font-size: 12px;
